--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,232 +1,306 @@
 * {
-	padding: 0;
-	margin: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	padding: 0 50px;
-	font-family: 'Jura', sans-serif;
-	color: white;
-	font-size: 15px;
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+  font-family: "Jura", sans-serif;
+  font-size: 15px;
+  padding: 0 50px;
+  color: white;
+}
+
+.background,
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  z-index: -1;
+  background: rgba(0,0,0,0.7);
+}
+
+.background {
+  z-index: -2;
+  transition: 0.5s linear;
+  object-fit: cover;
 }
 
 h2 {
-	font-size: 3em;
+  font-size: 3em;
 }
 
 h3 {
-	font-size: 2.1em;
+  font-size: 2.1em;
 }
 
 h4 {
-	font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .degree-container {
-	font-size: 7.2em;
-	margin-right: 20px;
+  font-size: 7.2em;
+  margin-right: 20px;
 }
 
 .degree-sign {
-	font-size: 0.4em;
+  font-size: 0.4em;
 }
 
 .header {
-	display: flex;
-	margin: 20px 0 0 0;
-	justify-content: space-between;
+  display: flex;
+  margin: 20px 0 0 0;
+  justify-content: space-between;
 }
 
 .main {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 20px;
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
 }
 
 .info {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	/* border: 1px solid; */
-	flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn-microphone {
+  position: absolute;
+}
+
+.errors {
+  width: 200px;
+  height: 35px;
+  margin-top: 5px;
+  color: white;
 }
 
 .map {
-	min-width: 400px;
-	/* border: 1px solid; */
-	box-sizing: border-box;
-	padding: 3.5em;
+  box-sizing: border-box;
+  min-width: 400px;
+  padding: 3.5em;
 }
 
-.latitude-container, .longitude-container {
-	text-align: end;
+.latitude-container,
+.longitude-container {
+  text-align: end;
 }
 
 #map {
-	width: 300px;
-	height: 300px;
-	clip-path: polygon(0% 0%, 100% 0%, 100% 89%, 80% 89%, 75% 100%, 70% 89%, 0 88%);
-	border-radius: 10px;
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 89%, 80% 89%, 75% 100%, 70% 89%, 0 88%);
 }
 
 .weatcher-discription {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .discription-icon {
-	width: 200px;
+  width: 200px;
 }
 
 .discription-text {
-	font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .weatcher-parameters {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.other span{
-	font-size: 1.5em;
+.other span {
+  font-size: 1.5em;
 }
 
 .future-container {
-	display: flex;
-	width: 100%;
-	justify-content: space-around;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .future {
-	border: 1px solid white;
-	min-width: 28%;
-	border-radius: 10px;
-	padding: 5px;
-	text-align: center;
+  min-width: 28%;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 10px;
 }
 
 .future:nth-child(2) {
-	margin: 0 20px;
+  margin: 0 20px;
 }
 
 .future img {
-	width: 100px;
+  width: 100px;
 }
 
 .date-future {
-	font-size: 1.32em;
+  font-size: 1.32em;
 }
 
 .degree-future {
-	font-size: 3em;
+  font-size: 3em;
 }
 
 .degree-sign-future {
-	font-size: 2em;
+  font-size: 2em;
 }
 
-.btn, .input-search {
-	background-color: transparent;
-	padding: 5px 10px;
-	border: 2px solid rgb(200,200,200);
-	outline: none;
-	color: white;
-	border-radius: 5px;
-	font-family: 'Jura', sans-serif;
-	font-size: 1.2em;
+.btn,
+.input-search {
+  font-family: "Jura", sans-serif;
+  font-size: 1.2em;
+
+  padding: 5px 10px;
+
+  color: white;
+  border: 2px solid rgb(200,200,200);
+  border-radius: 5px;
+  outline: none;
+  background-color: transparent;
+}
+
+.input-search {
+  padding-left: 40px;
 }
 
 .btn {
-	cursor: pointer;
+  cursor: pointer;
+}
+
+.btn-active {
+  background-color: rgba(186,210,255,0.6);
 }
 
 .btn:hover {
-	background: rgba(186,210,255,.6);
-    transition: .2s linear;
+  transition: 0.2s linear;
+  background: rgba(186,210,255,0.6);
 }
 
-.background-switcher, .be-lang {
-	margin-right: 10px;
+.volume-down {
+  transition: 0.2s linear;
+  background-color: rgba(238, 127, 93, 0.6);
+}
+
+.volume-up {
+  transition: 0.2s linear;
+  background-color: rgba(110, 238, 93, 0.6);
+}
+
+.background-switcher,
+.be-lang {
+  margin-right: 10px;
 }
 
 @media (max-width: 1000px) {
   .main {
-		flex-direction: column;
-	}
+    flex-direction: column;
+  }
 
-	.map {
-		display: flex;
-		padding: 0;
-		margin-top: 15px;
-	}
+  .map {
+    display: flex;
+    margin-top: 15px;
+    padding: 0;
+  }
 
-	.mapboxgl-map {
-		align-self: end;
-		margin-top: 15px;
-	}
+  .mapboxgl-map {
+    margin-top: 15px;
+    align-self: end;
+  }
 
-	#map {
-		width: 500px;
-		clip-path: polygon(0% 0%, 86% 0, 100% 0, 89% 10%, 89% 100%, 0 100%, 0% 75%);
-	}
+  #map {
+    width: 500px;
+    clip-path: polygon(0% 0%, 86% 0, 100% 0, 89% 10%, 89% 100%, 0 100%, 0% 75%);
+  }
 }
 
-@media (max-width: 720px) {
-	.header {
-		flex-direction: column;
-		align-items: center;
-	}
+@media (max-width: 820px) {
+  .header {
+    flex-direction: column;
+    margin-top: 10px;
+    align-items: center;
+  }
 
-	.search {
-		margin-top: 10px;
-	}
+  .search {
+    margin-top: 10px;
+  }
 
-	body {
-		font-size: 13px;
-	}
+  body {
+    font-size: 13px;
+  }
 }
 
 @media (max-width: 520px) {
-	.future-container {
-		flex-direction: column;
-		margin-top: 10px;
-	}
+  .future-container {
+    flex-direction: column;
+    margin-top: 10px;
+  }
 
-	.icon-future {
-		width: 70px;
-	}
+  .icon-future {
+    width: 70px;
+  }
 
-	body {
-		padding: 0 20px;
-	}
+  body {
+    padding: 0 20px;
+  }
 
-	.future {
-		padding: 0;
-	}
+  .future {
+    padding: 0;
+  }
 
-	.future:nth-child(2) {
+  .future:nth-child(2) {
     margin: 10px 0;
-	}
+  }
 
-	.map {
-		flex-direction: column;
-		min-width: 200px;
-	}
+  .map {
+    flex-direction: column;
+    min-width: 200px;
+  }
 
-	#map {
-		width: 100%;
-		clip-path: polygon(0% 0%, 100% 0%, 100% 89%, 49% 89%, 46% 100%, 42% 89%, 0 89%);
-	}
+  #map {
+    width: 100%;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 89%, 49% 89%, 46% 100%, 42% 89%, 0 89%);
+  }
 
-	.longitude-container, .latitude-container {
-		text-align: center;
-	}
+  .longitude-container,
+  .latitude-container {
+    text-align: center;
+  }
 }
 
 @media (max-width: 420px) {
-	.btn, .input-search {
-		padding: 5px;
-	}
+  .switches {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .switches .btn {
+    margin-top: 5px;
+  }
+
+  .form {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .input-search {
+    width: 150px;
+  }
 }
